GPS location gets turned into a compact JSON string and send as a PUT request to a specified URL.